# x64dbg-mcp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FEATURE_REQUESTS.md  LICENSE  QUICKSTART.md  README.md  build.bat  build.sh  config.json  configure.bat  vcpkg.json
.github/workflows/: build.yml
docs/: CONTRIBUTING_CN.md  INDEX_CN.md  QUICKSTART_CN.md  README_CN.md
examples/: python_client_http.py
src/: PluginEntry.cpp  plugin.def
src/business/: BreakpointManager.cpp  BreakpointManager.h  DebugController.cpp  DebugController.h  DisassemblyEngine.cpp  DisassemblyEngine.h  DumpManager.cpp  DumpManager.h  MemoryManager.cpp  MemoryManager.h  RegisterManager.cpp  RegisterManager.h  ScyllaWrapper.cpp  ScyllaWrapper.h  StackManager.cpp  StackManager.h  SymbolResolver.cpp  SymbolResolver.h  ThreadManager.cpp  ThreadManager.h
src/communication/: ConnectionManager.cpp  ConnectionManager.h  HeartbeatMonitor.cpp  HeartbeatMonitor.h  MCPHttpServer.cpp  MCPHttpServer.h  MessageTransport.cpp  MessageTransport.h  TCPServer.cpp  TCPServer.h
src/core/: ConfigManager.cpp  ConfigManager.h  Exceptions.cpp  Exceptions.h  JSONRPCParser.cpp  JSONRPCParser.h  Logger.cpp  Logger.h  MCPPromptRegistry.cpp  MCPToolRegistry.cpp  MethodDispatcher.cpp  MethodDispatcher.h  PermissionChecker.cpp  PermissionChecker.h  RequestValidator.cpp  RequestValidator.h  ResponseBuilder.cpp  ResponseBuilder.h  ServerManager.cpp  ServerManager.h  X64DBGBridge.h
src/handlers/: BreakpointHandler.cpp  BreakpointHandler.h  DebugHandler.cpp  DebugHandler.h  DisassemblyHandler.cpp  DisassemblyHandler.h  DumpHandler.cpp  DumpHandler.h  EventCallbackHandler.cpp  EventCallbackHandler.h  MemoryHandler.cpp  MemoryHandler.h  ModuleHandler.cpp  ModuleHandler.h  RegisterHandler.cpp  RegisterHandler.h  StackHandler.cpp  StackHandler.h  ThreadHandler.cpp  ThreadHandler.h
src/ui/: ConfigEditor.cpp
src/utils/: StringUtils.cpp  StringUtils.h  ThreadPool.cpp  ThreadPool.h
